@startuml

title __APP's Class Diagram__\n

  package com.example.todo {
    class BuildConfig {
    }
  }
  

  package com.example.todo {
    class ChoixListActivity {
    }
  }
  

  package com.example.todo {
    class ItemAdapterItem {
    }
  }
  

  package com.example.todo {
    class ItemAdapterList {
    }
  }
  

  package com.example.todo {
    class ItemToDo {
    }
  }
  

  package com.example.todo {
    class ListeToDo {
    }
  }
  

  package com.example.todo {
    class MainActivity {
    }
  }
  

  package com.example.todo {
    class ProfilToDoList {
    }
  }
  

  package com.example.todo {
    class SettingsActivity {
    }
  }
  

  package com.example.todo {
    class ShowListActivity {
    }
  }
  

  package com.example.todo {
    class SwipeToDeleteCallbackItem {
    }
  }
  

  package com.example.todo {
    class SwipeToDeleteCallbackList {
    }
  }
  

  ChoixListActivity -up-|> ActionListener
  ChoixListActivity -up-|> AppCompatActivity
  ChoixListActivity o-- ProfilToDoList : profil
  ChoixListActivity o-- ItemAdapterList : adapterlist
  ItemAdapterItem -up-|> Adapter
  ItemAdapterItem o-- ActionListener : actionListener
  ItemAdapterItem o-- ItemToDo : recentlyDeletedItem
  ItemAdapterList -up-|> Adapter
  ItemAdapterList o-- ActionListener : actionListener
  ItemAdapterList o-- ListeToDo : recentlyDeletedList
  ItemToDo -up-|> Serializable
  ListeToDo -up-|> Serializable
  MainActivity -up-|> OnClickListener
  MainActivity -up-|> AppCompatActivity
  ProfilToDoList -up-|> Serializable
  SettingsActivity -up-|> PreferenceActivity
  ShowListActivity -up-|> ActionListener
  ShowListActivity -up-|> AppCompatActivity
  ShowListActivity o-- ProfilToDoList : profil
  ShowListActivity o-- ItemAdapterItem : adapterlist
  SwipeToDeleteCallbackItem -up-|> SimpleCallback
  SwipeToDeleteCallbackItem o-- ItemAdapterItem : mAdapter
  SwipeToDeleteCallbackList -up-|> SimpleCallback
  SwipeToDeleteCallbackList o-- ItemAdapterList : mAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
